プリフライトリクエスト用のエンドポイントを追加
