# app/adapter/presentation/handler/user/get_users_handler.go
@@ -23,9 +23,9 @@ func NewGetUsersHandler(fetchAllUserUsecase *user.FetchUsersUsecase) *GetUsersHa
 // @Tags        User
 // @Produce     json
 // @Security    BearerAuth
-// @Success     200 {object} presenter.SuccessResponse[[]GetUsersResponse] "登録されたユーザーの情報"
-// @Failure     400 {object} presenter.FailureResponse                     "不正なリクエスト"
-// @Failure     500 {object} presenter.FailureResponse                     "内部サーバーエラー"
+// @Success     200 {object} presenter.SuccessResponse[[]GetUserResponse] "登録されたユーザーの情報"
+// @Failure     400 {object} presenter.FailureResponse                    "不正なリクエスト"
+// @Failure     500 {object} presenter.FailureResponse                    "内部サーバーエラー"
 // @Router      /users [get]
 func (guh *GetUsersHandler) ServeHTTP(rw http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
